objects/CEE_Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>CEE__c</fullName>
        <description>It is the master-detail relationship with Customer Engagements Event object.</description>
        <label>CEE</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Customer Feedback</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Cisco_Improvement_Opportunity__c</fullName>
        <description>This field is used to store the below feedback question answer from Surveys
What is the one action we could take to improve your relationship with Cisco?</description>
        <label>Cisco Improvement Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <description>This field is used for OBX and CPOC to store the below value of the survey question
Do you feel more or less confident...?</description>
        <label>Confidence Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Score__c</fullName>
        <description>The above field is used to store the OBX and CPOC survey answers
Please rate how well the content is addressed.</description>
        <label>Content Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience__c</fullName>
        <description>This field is used to store the Survey response of CPOC and OBX</description>
        <label>Customer Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effectiveness_of_virtual_tool__c</fullName>
        <description>How effective was the CPOC engineer utilizing these virtual tools?</description>
        <label>Effectiveness of virtual tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>This field is used to store the survey response of OBX and CPOC for the Email address.</description>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encourage_Future_CPOC_Test_Engagements__c</fullName>
        <description>Would you encourage future CPOC test engagements for you and your company be conducted virtually?</description>
        <label>Encourage Future CPOC Test Engagements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_and_Last_Name__c</fullName>
        <description>This field is used to store the Survey feedback for OBX and CPOC</description>
        <label>First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Cameras__c</fullName>
        <label>IP Cameras</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Opportunity__c</fullName>
        <description>This field is used to store survey values for OBX and CPOC</description>
        <label>Improvement Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Persons_Travel_saved_using_CPOC__c</fullName>
        <description>Persons travel  saved using Virtual CPOC?</description>
        <label>Persons Travel saved using CPOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Feedback__c</fullName>
        <description>This field is for storing answer for CPOC survey question as "Please enter any comments you have regarding your CPOC Engineer or overall CPOC support"</description>
        <label>CPOC Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Feedback__c</fullName>
        <description>This field is used to store the Survey feedback for OBX and CPOC</description>
        <label>Recommendation Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Score__c</fullName>
        <description>This field is used to Store the Survey feedback for CPOC and OBX</description>
        <label>Recommendation Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Type__c</fullName>
        <description>This field is used to store Survey feedback for OBX and CPOC. Calculation based below .
1. 0-6 Range (Detractors)
2. 7-8 Range (Passives)
3. 9-10 Range (Promoters)</description>
        <formula>IF(Recommendation_Score__c &lt;&gt; '',
IF(VALUE(Recommendation_Score__c)  &lt;= 6 , 'Detractors', 
IF(AND(VALUE(Recommendation_Score__c) &gt;=7,VALUE(Recommendation_Score__c) &lt;= 8), 'Passives', 
'Promoters')),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Feedback__c</fullName>
        <description>It is used to store the Survey feedback for OBX and CPOC</description>
        <label>Speaker Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Project_Type__c</fullName>
        <description>This is used to set record type in CEE Customer Feedback object</description>
        <formula>IF(CEE__r.RecordTypeId = $Setup.ObjectRecordTypeIds__c.CEE_CPOC_Record_Type_ID__c, 'CPOC', 
IF(CEE__r.RecordTypeId = TRIM(LEFT($Setup.ObjectRecordTypeIds__c.CEE_OBX_Record_Type_ID__c, 15)), 'OBX', 
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE__c</fullName>
        <description>Title of the User in  CSAT Survey</description>
        <label>TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telepresence_Video_Conferencing__c</fullName>
        <description>Telepresence/Video Conferencing for CPOC CSAT Survey</description>
        <label>Telepresence/Video Conferencing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Whiteboard__c</fullName>
        <description>Virtual Whiteboard field for CPOC CSAT Survey</description>
        <label>Virtual Whiteboard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webex__c</fullName>
        <description>Webex for CSAT CPOC Report Type</description>
        <label>Webex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object is created to store the survey information for OBX and CPOC</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Customer Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEE Customer Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CEE__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>CPOC_Customer_Feedback</fullName>
        <active>true</active>
        <description>This will save the customer feedback for CPOC request</description>
        <label>CPOC Customer Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>OBX_Customer_Feedback</fullName>
        <active>true</active>
        <description>This will save the customer feedback for OBX request</description>
        <label>OBX Customer Feedback</label>
    </recordTypes>
</CustomObject>